# Smart_Scholarship_Assistant

./: LICENSE  README.md
backend/: clear_Langraph_memo.py  pyproject.toml  requirements.txt  test.py
backend/app/: config.py  main.py
backend/app/api/: agent_api.py  check_db.py  test_retriever.py
backend/app/graph/: graph.py  router.py  runtime.py  state.py
backend/app/graph/nodes/: agent_node.py  tool_node.py
backend/app/graph/tools/: __init__.py  google_search.py  rag_tool.py
backend/app/llm/: model.py  prompts.py
backend/app/rag/: embed.py  ingest.py  preprocessor.py  retriever.py  vectorstore.py
backend/app/utils/: db_context_mnger.py  summarize_db_context.py
backend/data/: scholarships.md
frontend/: index.html  package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatInterface.jsx  MessageBubble.jsx  MessageInput.jsx  MessageList.jsx
frontend/src/utils/: api.js
