[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.124.4",
    "google-generativeai>=0.8.5",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.0",
    "langchain-google-genai>=4.0.0",
    "langchain-groq>=1.1.1",
    "langchain-huggingface>=1.2.0",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.0",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.14",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-postgres>=1.0.0",
    "psycopg[binary,pool]>=3.3.0",
    "langgraph-checkpoint-mongodb>=0.3.0",
    "pymongo>=4.7.0",
    "pinecone>=6,<8",
    "pypdf>=6.4.1",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.0",
    "tiktoken>=0.12.0",
    "uvicorn[standard]>=0.38.0",
]
